--- a/roles/cluster_hosts/tasks/get_cluster_hosts_state.yml
+++ b/roles/cluster_hosts/tasks/get_cluster_hosts_state.yml
@@ -3,7 +3,7 @@
 - name: Get the state of the VMs in the cluster
   include_tasks: "get_cluster_hosts_state_{{cluster_vars.cloud_type}}.yml"
 
-- name: get_cluster_hosts_state | cluster_hosts_state
+- name: get_cluster_hosts_state | debug cluster_hosts_state
   debug: msg="{{cluster_hosts_state}}"
   delegate_to: localhost
   run_once: true
