--- a/roles/readiness/tasks/post_deploy.yml
+++ b/roles/readiness/tasks/post_deploy.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: readiness/host | re-enable systemd__disable_apt_services
+- name: readiness/post_deploy | re-enable systemd__disable_apt_services
   become: true
   ansible.builtin.systemd_service:
     name: "{{ item.svc }}"
