--- a/roles/redeploy/_scheme_addallnew_rmdisk_rollback/tasks/redeploy.yml
+++ b/roles/redeploy/_scheme_addallnew_rmdisk_rollback/tasks/redeploy.yml
@@ -17,23 +17,9 @@
         hosts_to_relabel: "{{ cluster_hosts_state | json_query(\"[?tagslabels.cv__lifecycle_state=='current']\") }}"
         new_state: "retiring"
 
-    - name: "Run {{mainclusteryml}} to provision new cluster (and skip readiness (e.g. DNS CNAMES)).  Note: If an argv tuple value starts with '{', or contains '={', surround it with single quotes to preserve as dict when re-parsed"
+    - name: "Run {{mainclusteryml}} to provision new cluster (skipping post-redeploy readiness).  Note: If an argv tuple value starts with '{', or contains '={', surround it with single quotes to preserve as dict when re-parsed"
       dseeley.nested_playbook.nested_playbook:
-        playbook_cmdline: "{{ (ansible_facts.argv[1:] | map('regex_replace', '(^|=)(\\{.*\\})$', \"\\1'\\2'\" ) | join(' ')) | regex_replace('redeploy.yml', mainclusteryml) }} {{ redeploy_extra_vars | default({}) | clusterverse.clusterverse.extravars_from_dict }} --skip-tags=clusterverse_readiness"    #TODO: add this at some point, maybe.  Needs setting at a level above this (the whole file should apply to the selected myhosttype)  -e cluster_suffix={{cluster_suffix}} -e '{'cluster_hosts_target': {{cluster_hosts_target_to_redeploy | to_json}}}'"
-#      vars:
-#        # This should consist of the existing cluster_hosts_target, minus any existing hosts (cluster_hosts_state) that are not in the myhosttypes list (if created).  Better to subtract from cluster_hosts_target, (rather than build a new one), because we might be increasing the cluster size.
-#        cluster_hosts_target_to_redeploy: |
-#          {%- set cluster_hosts_target_to_redeploy = cluster_hosts_target -%}
-#          {%- for cht_idx in range((cluster_hosts_target_to_redeploy | length - 1), -1, -1) -%}
-#            {%- set breakloop = namespace(break=false) -%}
-#            {%- for chs_host in cluster_hosts_state | json_query('[? (\'' + myhosttypes|default('') + '\' != \'\'  &&  !contains([\'' + myhosttypes|default('') + '\'], tagslabels.cv__hosttype))].name') if not breakloop.break -%}
-#              {%- if cluster_hosts_target_to_redeploy[cht_idx].hostname | regex_replace('-(?!.*-).*') == chs_host | regex_replace('-(?!.*-).*') -%}
-#                {%- set _ = cluster_hosts_target_to_redeploy.pop(cht_idx) -%}
-#                {%- set breakloop.break = true -%}
-#              {%- endif -%}
-#            {%- endfor -%}
-#          {%- endfor -%}
-#          {{cluster_hosts_target_to_redeploy}}
+        playbook_cmdline: "{{ (ansible_facts.argv[1:] | map('regex_replace', '(^|=)(\\{.*\\})$', \"\\1'\\2'\" ) | join(' ')) | regex_replace('redeploy.yml', mainclusteryml) }} {{ redeploy_extra_vars | default({}) | clusterverse.clusterverse.extravars_from_dict }} --skip-tags=clusterverse_readiness"
 
     - fail:
       when: testfail is defined and testfail == "fail_1"
@@ -54,7 +40,7 @@
   block:
     - assert: { that: "'retiring' in (cluster_hosts_state | map(attribute='tagslabels.cv__lifecycle_state'))", msg: "ERROR - There are no machines in the 'retiring' state." }
 
-    - name: "Run {{mainclusteryml}} to perform readiness steps on new cluster (CNAME).  Note: If an argv tuple value starts with '{', or contains '={', surround it with single quotes to preserve as dict when re-parsed"
+    - name: "Run {{mainclusteryml}} to perform post-redeploy readiness steps on new cluster.  Note: If an argv tuple value starts with '{', or contains '={', surround it with single quotes to preserve as dict when re-parsed"
       dseeley.nested_playbook.nested_playbook:
         playbook_cmdline: "{{ (ansible_facts.argv[1:] | map('regex_replace', '(^|=)(\\{.*\\})$', \"\\1'\\2'\" ) | join(' ')) | regex_replace('redeploy.yml', mainclusteryml) }} {{ redeploy_extra_vars | default({}) | clusterverse.clusterverse.extravars_from_dict }} --tags=clusterverse_dynamic_inventory,clusterverse_readiness"
 
