--- a/docs/EXAMPLE/cluster_defs/gcp/dev/cluster_vars__buildenv.yml
+++ b/docs/EXAMPLE/cluster_defs/gcp/dev/cluster_vars__buildenv.yml
@@ -24,7 +24,7 @@ cluster_vars:
     hosttype_vars:
       sys:
         auto_volumes: [ ]
-        flavor: "e2-micro"
+        flavor: "e2-small"
         version: "{{sys_version | default('')}}"
         vms_by_az: { a: 1, b: 1, c: 0 }
 
@@ -32,7 +32,7 @@ cluster_vars:
         auto_volumes:
           - { auto_delete: true, interface: "SCSI", volume_size: 1, mountpoint: "/media/mysvc1", fstype: "ext4", perms: { owner: "root", group: "root", mode: '0775' } }
           - { auto_delete: true, interface: "SCSI", volume_size: 1, mountpoint: "/media/mysvc2", fstype: "ext4", opts: "noatime" }
-        flavor: "e2-micro"
+        flavor: "e2-small"
         rootvol_size: "25"              # This is optional, and if set, MUST be bigger than the original image size (20GB on GCP)
         version: "{{sysdisks_version | default('')}}"
         vms_by_az: { a: 1, b: 1, c: 0 }
@@ -42,7 +42,7 @@ cluster_vars:
           - { auto_delete: true, interface: "SCSI", volume_size: 1, mountpoint: "/media/mysvc", fstype: "ext4" }
           - { auto_delete: true, interface: "SCSI", volume_size: 1, mountpoint: "/media/mysvc", fstype: "ext4" }
         lvmparams: { vg_name: "vg0", lv_name: "lv0", lv_size: "100%VG" }
-        flavor: "e2-micro"
+        flavor: "e2-small"
         rootvol_size: "25"              # This is optional, and if set, MUST be bigger than the original image size (20GB on GCP)
         version: "{{sysdisks_version | default('')}}"
         vms_by_az: { a: 1, b: 1, c: 0 }
