--- a/docs/EXAMPLE/cluster.yml
+++ b/docs/EXAMPLE/cluster.yml
@@ -12,12 +12,14 @@
     - { include_role: { name: "clusterverse.clusterverse.create", apply: { tags: ["clusterverse_create"]} }, tags: ["clusterverse_create"] }
     - { include_role: { name: "clusterverse.clusterverse.dynamic_inventory", apply: { tags: ["always"]} }, tags: ["always"] }
 
-- name: clusterverse | Validate remote python version is supported by local ansible version; import_playbook 'python39_install.yml' if not
-  hosts: all
+- name: clusterverse | Validate remote python version is supported by local ansible version; import_playbook 'raw_python39_install.yml' if not
+  hosts: all:!not_target_hosts
   gather_facts: false
+  tags: ["clusterverse_create"]
   tasks:
-    - { ansible.builtin.setup: { gather_subset: ["python"] }, ignore_errors: true, register: r__setup__python_version_check }
-    - { include_tasks: "python39_install.yml", when: r__setup__python_version_check.failed is defined and r__setup__python_version_check.failed }
+    - { ansible.builtin.wait_for: { port: 22, host: '{{ ansible_host }}', timeout: 30 }, delegate_to: localhost }
+    - { ansible.builtin.setup: { gather_subset: ["python"] }, ignore_errors: true, register: r__setup__python_version_check, vars: { ansible_ssh_retries: 10 } }
+    - { include_role: { name: "clusterverse.clusterverse.config", tasks_from: "raw_python39_install.yml" }, when: r__setup__python_version_check.failed is defined and r__setup__python_version_check.failed }
 
 - name: clusterverse | Configure the cluster VM OSs (excluding not-being-redeployed hosts)
   hosts: all:!not_target_hosts
@@ -41,6 +43,8 @@
 ###### Application roles ######
 
 
-- name: clusterverse | Perform cluster readiness operations (DNS/CNAMEs - CNAMES are used for intra-cluster connections, so we don't want to swap them until they're fully built (during redeploy))
+- name: clusterverse | Perform cluster readiness operations. 'post_deploy.yml' is run after every cluster deploy; 'post_redeploy.yml' is run after redeploy (or cluster deploy if this is not a redeploy)
   hosts: localhost
-  tasks: [ { include_role: { name: "clusterverse.clusterverse.readiness", apply: { tags: ["clusterverse_readiness"]} }, tags: ["clusterverse_readiness"] } ]
+  tasks:
+    - { include_role: { name: "clusterverse.clusterverse.readiness", tasks_from: "post_deploy.yml" } }
+    - { include_role: { name: "clusterverse.clusterverse.readiness", tasks_from: "post_redeploy.yml", apply: { tags: ["clusterverse_readiness"]} }, tags: ["clusterverse_readiness"] }
